# PolyKokkos-install

./: README.md  install.sh
docker/debian12/: Dockerfile
examples/equamat/: CMakeLists.txt  build.sh  main.cpp
scripts/: clone_repository.sh  compile_kokkos.sh  compile_llvm.sh
